traefik-dashboard.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-ingress
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-ingress
  template:
    spec:
      containers:
        - name: traefik
          ports:
            - containerPort: 8080
              name: traefik-dashboard
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-svc
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
    selector:
      app: traefik-ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-webui
spec:
  rules:
    - host: traefik.xxii.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-ingress-svc
                port:
                  number: 8080
